package co.edu.javeriana.ctai.tgsecurity.repository;

import java.util.Optional;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import co.edu.javeriana.ctai.tgsecurity.patterns.model.User;

@Repository
public interface IUserRepository extends JpaRepository<User, Long>{

	Optional<User> findByUsername(String username);
	Boolean existsByUsername(String username);

}
